[package]
name = "stix-math"
version = "0.1.0"
edition = "2021"
description = "A LaTeX equation parser that produces an abstract syntax tree. Supports fractions, roots, matrices, big operators, Greek letters, accents, and 130+ Unicode symbols — with convenient bareword syntax."
license = "MIT"
repository = "https://github.com/William-Selna/Rust-LaTeX-Parser"
keywords = ["latex", "math", "equation", "parser", "ast"]
categories = ["parser-implementations", "mathematics"]

[dependencies]
